<resources>
    <string name="app_name">PlanarsatInder</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="titulo_cenatel">Centro Nacional de Teledetección con Fines Agricolas</string>
    <string name="correo_cenatel">cenatel.venezuela@gmail.com</string>
    <string name="op_datos">Datos</string>
    <string name="op_puntos">Puntos</string>
    <string name="op_enviar_datos">Enviar Datos</string>
    <!-- fragment datos-->
    <string name="op_inspector">Nombre Inspector</string>
    <string name="op_fechaCaptura">Fecha de Captura</string>
    <string name="op_estado">Estado</string>
    <string name="op_municipio">Municipio</string>
    <string name="op_parroquia">Parroquia</string>
    <string name="op_sector">Sector</string>
    <string name="op_tipoObra">Tipo de Obra</string>
    <!-- fragment sistema de riego: embalse-->
    <string name="op_nombreSistema">Nombre Sistema de Riego</string>
    <string name="op_ocaptacion">Obra de Captación</string>
    <string name="op_tipo">Tipo:</string>
    <string name="op_capacidad">Capacidad:</string>
    <string name="op_profundidad">Profundidad:</string>
    <string name="op_diametro">Diametro:</string>
    <string name="op_caudal">Caudal:</string>
    <string name="op_calidadagua">Calidad del agua:</string>
    <string name="op_abatimiento">Abatimiento:</string>
    <string name="op_tipobomba">Tipo de Bomba:</string>
    <string name="op_oconduccion">Obra de Conducción</string>
    <string name="op_odistribucion">Obra de Distribución</string>
    <string name="op_embalse"><u>EMBALSE</u></string>
    <string name="op_dique">Dique</string>
    <string name="op_longitud">Longitud</string>
    <string name="op_altura">Altura</string>
    <string name="op_espejo">Espejo de Agua</string>
    <string name="op_toma">Toma</string>
    <string name="op_aliviadero">Aliviadero</string>
    <string name="op_areaderiego"><u>Area de Riego</u></string>
    <string name="op_superficie">Superficie</string>
    <string name="op_cultivos">Cultivos</string>
    <string name="op_metodosriego">Metodos de Riego</string>
    <string name="op_arearegable">Area Regable</string>
    <string name="op_areabajoriego">Area Bajo Riego</string>
    <string name="op_arearegada">Area Regada</string>
    <!-- fragment sistema de riego: embalse-->
    <string name="op_derivacion"><u>DERIVACI\u00d3N</u></string>
    <string name="op_desarenador">Desarenador</string>
    <string name="op_tipopavimento">Tipo de Pavimento</string>

    <string name="op_pozo"><u>POZO</u></string>

    <string name="op_laguna"><u>LAGUNA</u></string>
    <string name="op_vialidad"><u>VIALIDAD</u></string>



    <string name="op_problemas">Problemas</string>
    <string name="op_observaciones">Observaciones</string>
    <string name="op_btCapturar">Capturar</string>
    <string name="op_btEnviar">Enviar</string>
</resources>
