<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/status_bar_height">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:theme="@style/ToolbarTheme" />

            </FrameLayout>

            <TextView
                android:id="@+id/tv_nombreSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/abc_action_bar_default_height_material"
                android:text="@string/op_nombreSistema"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/et_nombreSistema"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_nombreSistema"
                android:ems="10"
                android:hint="Escribe Nombre del Sistema" />

            <TextView
                android:id="@+id/tv_ocaptacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_nombreSistema"
                android:layout_marginTop="10dp"
                android:text="@string/op_ocaptacion"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_ocaptacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_ocaptacion"
                android:longClickable="true" />

            <TextView
                android:id="@+id/tv_oconduccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spi_ocaptacion"
                android:layout_marginTop="10dp"
                android:text="@string/op_oconduccion"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_oconduccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_oconduccion"
                android:longClickable="true" />

            <TextView
                android:id="@+id/tv_odistribucion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spi_oconduccion"
                android:layout_marginTop="10dp"
                android:text="@string/op_odistribucion"
                android:textColor="@color/md_text"
                android:textSize="21sp" />

            <Spinner
                android:id="@+id/spi_odistribucion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_odistribucion"
                android:longClickable="true" />

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aqui va el texto" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>